# 3D-Game-client-with-C-opengl

./: CMakeLists.txt  README.md
assets/materials/: brick.mat  checker.mat  suzanne.mat
assets/scenes/: scene.sc
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Common.h  Engine.cpp  Engine.h  eng.h
engine/source/audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h
engine/source/font/: Font.cpp  Font.h  FontManager.cpp  FontManager.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/physics/: Collider.cpp  Collider.h  CollisionObject.cpp  CollisionObject.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  AudioComponent.cpp  AudioComponent.h  AudioListenerComponent.cpp  AudioListenerComponent.h  CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  SpriteComponent.cpp  SpriteComponent.h
engine/source/scene/components/ui/: ButtonComponent.cpp  ButtonComponent.h  CanvasComponent.cpp  CanvasComponent.h  RectTransformComponent.cpp  RectTransformComponent.h  TextComponent.cpp  TextComponent.h  UIElementComponent.cpp  UIElementComponent.h  UIInputSystem.cpp  UIInputSystem.h
lessons/chapter1/: Lesson 1.0 (准备).md  Lesson 1.1 (第一个窗口).md  Lesson 1.2 (OpenGL 注册).md  Lesson 1.3 (Vertices 顶点).md  Lesson 1.4 (图形渲染管线).md  Lesson 1.5 (着色器).md  Lesson 1.6 (顶点缓冲+渲染 第一个三角形).md  Lesson 1.7 (顶点颜色).md  Lesson 1.8 (基础输入 + Uniforms).md  Lesson 1.9 (贪吃蛇).md
lessons/chapter2/: Lesson 2.1 (Engine Basics).md  Lesson 2.1 (基础引擎).md  Lesson 2.10 (Rendering).md  Lesson 2.10 (渲染).md  Lesson 2.11 (Keyboard Input).md  Lesson 2.11 (键盘输入).md  Lesson 2.2 (Implementing Core Classes).md  Lesson 2.2 (实现核心类).md  Lesson 2.3 (Basic Project Integration).md  Lesson 2.3 (基础项目集成).md  Lesson 2.4 (Window within Engine).md  Lesson 2.4 (带窗口的引擎).md  Lesson 2.5 (InputManager).md  Lesson 2.5 (输入管理类).md  Lesson 2.6 (GraphicsAPI + ShaderProgram).md  Lesson 2.6 (图形API + 着色器).md  Lesson 2.7 (Material).md  Lesson 2.7 (材质).md  Lesson 2.8 (Mesh).md  Lesson 2.8 (网格).md  Lesson 2.9 (Mesh Creation).md  Lesson 2.9 (创建网格).md
lessons/chapter3/: Lesson 3.1 (Scene and GameObject).md  Lesson 3.1 (场景与游戏对象).md  Lesson 3.10 (Move to 3d).md  Lesson 3.10 (迈向3D).md  Lesson 3.11 (Quaternions).md  Lesson 3.11 (四元数).md  Lesson 3.2 (SetParent).md  Lesson 3.2 (设置父对象).md  Lesson 3.3 (TestObject).md  Lesson 3.3 (测试对象).md  Lesson 3.4 (Transform intro).md  Lesson 3.4 (介绍转换).md  Lesson 3.5 (Transform implementation).md  Lesson 3.5 (转换实现).md  Lesson 3.6 (Components).md  Lesson 3.6 (组件).md  Lesson 3.7 (Camera).md  Lesson 3.7 (相机).md  Lesson 3.8 (Camera integration).md  Lesson 3.8 (集成相机).md  Lesson 3.9 (PlayerController).md  Lesson 3.9 (玩家控制器).md
lessons/chapter4/: Lesson 4.1 (FileSystem).md  Lesson 4.1 (文件系统).md  Lesson 4.10 (Physics).md  Lesson 4.10 (物理).md  Lesson 4.11 (PlayerController capsule).md  Lesson 4.11 (玩家控制器胶囊体).md  Lesson 4.12 (Scene loading Part1).md  Lesson 4.12 (场景加载 Part1).md  Lesson 4.13 (Scene loading Part2).md  Lesson 4.13 (场景加载 Part2).md  Lesson 4.14 (Audio).md  Lesson 4.14 (音频).md  Lesson 4.15 (Bullets).md  Lesson 4.15 (子弹).md  Lesson 4.16 (Ambient, Materials, Direct light).md  Lesson 4.16 (环境 材质 直射光).md  Lesson 4.17 (Jump Platform).md  Lesson 4.17 (跳跃平台).md  Lesson 4.2 (Textures).md  Lesson 4.2 (纹理).md  Lesson 4.3 (Textures + Shaders Loading).md  Lesson 4.3 (纹理 + 着色器加载).md  Lesson 4.4 (Material Loading).md  Lesson 4.4 (材质加载).md  Lesson 4.5 (Mesh Loading).md  Lesson 4.5 (网格加载).md  Lesson 4.6 (Diffuse lighting).md  Lesson 4.6 (漫反射光照).md  Lesson 4.7 (Full GLTF Loading).md  Lesson 4.7 (完整GLTF加载).md  Lesson 4.8 (Gun + Specular).md  Lesson 4.8 (枪械 + 高光照明).md  Lesson 4.9 (Animations).md  Lesson 4.9 (动画).md
lessons/chapter5/: Lesson 5.1 (Sprite P1).md  Lesson 5.1 (精灵 P1).md  Lesson 5.2 (Sprite P2).md  Lesson 5.2 (精灵 P2).md  Lesson 5.3 (Basic UI).md  Lesson 5.3 (基础 UI).md  Lesson 5.4 (Font + TextComponent).md  Lesson 5.4 (字体 + 文本组件).md  Lesson 5.5 (TextComponent rendering).md  Lesson 5.5 (文本组件渲染).md  Lesson 5.6 (ButtonComponent).md  Lesson 5.6 (按钮组件).md  Lesson 5.7 (Button Interaction).md  Lesson 5.7 (按钮交互).md  Lesson 5.8 (UI Integration).md  Lesson 5.8 (UI 集成).md  Lesson 5.9 (Anchor).md  Lesson 5.9 (锚点).md
source/: Bullet.cpp  Bullet.h  Game.cpp  Game.h  JumpPlatform.cpp  JumpPlatform.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h  main.cpp
